fix: dark mode colors

--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -69,6 +69,7 @@
     overflow-x: visible;
     align-self: flex-start;
     z-index: 9999;
+    color: var(--text-color);
   }
   
 }
