--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -125,7 +125,7 @@
   animation: slide-down 0.8s;
 }
 
-footer {
+.home__footer {
   background-color: var(--footer);
   width: 100%;
   height: 225px;
